--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -2,12 +2,6 @@
 
     <title>{{title}} | Bethel University</title>
 
-    <link rel="preconnect" href="https://cdn1.bethel.edu" crossorigin>
-    <link rel="preconnect" href="https://cdn2.bethel.edu" crossorigin>
-    <link rel="preconnect" href="https://cdn3.bethel.edu" crossorigin>
-    <link rel="preconnect" href="https://cdn4.bethel.edu" crossorigin>
-    <link rel="preconnect" href="https://cloud.typography.com">
-
     <meta charset="utf-8"/>
     <meta content="" name="description"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -15,6 +9,7 @@
     <link href="https://www.bethel.edu/cdn/images/favicon.ico" rel="icon" type="image/x-icon"/> 
 
     <link rel="stylesheet" type="text/css" href="css/pickles.css">
+    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6664852/692222/css/fonts.css" />
 
     {{!-- polyfill - picture element for ie11 --}}
     <script defer async src="https://cdn.polyfill.io/v2/polyfill.min.js?features=HTMLPictureElement&flags=gated"></script>
