--- a/src/css/enhance/quotes.css
+++ b/src/css/enhance/quotes.css
@@ -8,7 +8,7 @@
     }
 }
 
-.carousel--quote,
+/* .carousel--quote,
 .carousel--employee {
     .flickity-prev-next-button .arrow {
       fill: $bethel--blue;
@@ -16,10 +16,22 @@
     .flickity-prev-next-button.no-svg {
       color: $bethel--blue;
     }
+} */
+
+.carousel--quote .flickity--cell,
+.carousel--employee .flickity--cell {
+    width: 100%;
 }
 
 .quote {
     margin: 0 1em;
+    /* font-family: 
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    "Roboto",
+    "Helvetica Neue", Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
 
     @mixin respond-min $x-large{
         display: flex;
