--- a/src/templates/partials/quotes.hbs
+++ b/src/templates/partials/quotes.hbs
@@ -1,6 +1,6 @@
-<div class="flickity  carousel--employee">
+<div class="flickity  carousel--employee  js-rotate-order-carousel">
 
-    <div class="flickity--cell  lazyload">
+    <div class="flickity--cell">
         <div class="quote">
             <div class="quote__avatar">
                 <img  class="lazyload" data-src="https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_nettleton-nicole.jpg" style="opacity: 1;">
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <div class="flickity--cell  lazyload">
+    <div class="flickity--cell">
         <div class="quote">
             <div class="quote__avatar">
                 <img  class="lazyload" data-src="https://cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_lin-chin-chin.jpg" style="opacity: 1;" title="">
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="flickity--cell  lazyload">
+    <div class="flickity--cell">
         <div class="quote">
             <div class="quote__avatar">
                 <img  class="lazyload" data-src="https://cdn3.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_vennerstrom-andrew.jpg" style="opacity: 1;" title="">
