removing site image bank styles

--- a/src/css/pickles.css
+++ b/src/css/pickles.css
@@ -32,7 +32,7 @@
 @import "site/off-canvas--site.css";
 @import "site/site__title.css";
 @import "site/site__features.css";
-@import "site/site__image-bank.css";
+/* @import "site/site__image-bank.css"; */
 
 @import "page/page__title.css";
 @import "page/page--home.css";
