--- a/src/templates/pages/random.hbs
+++ b/src/templates/pages/random.hbs
@@ -5,43 +5,19 @@ pageTitle: Admissions Routing
 ---
 
 <div class="inner--content">
+
+    <div class="inner-wrap--site__navigation">
+
     <div class="page__title">
         <h1 itemprop="name">Admissions</h1>
         <p class="breadcrumb"></p>
     </div>
 
+    {{> site__navigation }}
+
     <div class="main">
-        {{> news }}
+        {{> image-bank }}
 
-        <div class="flickity">
-                    <div class="flickity--cell">
-                        <img src="https://cdn1.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/students-talking-commons.jpg"
-                            data-srcset="   https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/students-talking-commons.jpg 1400w,
-                                https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/students-talking-commons.jpg 1200w,
-                                https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/students-talking-commons.jpg 1000w,
-                                https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/students-talking-commons.jpg 800w,
-                                https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/students-talking-commons.jpg 600w,
-                                https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/students-talking-commons.jpg 400w,
-                                https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/students-talking-commons.jpg 200w"
-                            data-sizes="auto" class="lazyload"
-                            alt="Students working together in the student commons">
-
-                    </div>
-                    <div class="flickity--cell">
-                        <img src="https://cdn1.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/graduation.jpg"
-                            data-srcset="   https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/graduation.jpg 1400w,
-                                https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/graduation.jpg 1200w,
-                                https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/graduation.jpg 1000w,
-                                https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/graduation.jpg 800w,
-                                https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/graduation.jpg 600w,
-                                https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/graduation.jpg 400w,
-                                https://cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/seminary/admissions/images/site-images/graduation.jpg 200w"
-                            data-sizes="auto" class="lazyload"
-                            alt="Student smiles during graduation ceremony">
-
-                    </div>
-        </div>
-    </div>
 
     <div class="collapsible collapsible--generic">
         <h2 class="collapsible-heading" id="bethel-cccu-employee-scholarship" name="bethel-cccu-employee-scholarship">
@@ -247,4 +223,7 @@ pageTitle: Admissions Routing
         </div>
     </div>
 
+    </div>
+
+        </div>
 </div>
