--- a/src/templates/partials/image-bank.hbs
+++ b/src/templates/partials/image-bank.hbs
@@ -1,113 +1,36 @@
 <div class="site__image-bank">
-<div class="flickity  carousel--image-bank" tabindex="0">
+    <div class="flickity carousel--image-bank" >
 
-    <div class="flickity--cell">
+                <div class="flickity--cell ">
+                    <div class="ratio-box">
+                        <img src="https://cdn2.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/graduating-cap-gown.jpg"
+                            data-srcset="   https://cdn2.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/graduating-cap-gown.jpg 1400w,
+                        https://cdn2.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/graduating-cap-gown.jpg 1200w,
+                        https://cdn2.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/graduating-cap-gown.jpg 1000w,
+                        https://cdn2.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/graduating-cap-gown.jpg 800w,
+                        https://cdn2.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/graduating-cap-gown.jpg 600w,
+                        https://cdn2.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/graduating-cap-gown.jpg 400w,
+                        https://cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/graduating-cap-gown.jpg 200w"
+                            data-sizes="auto" class="lazyload" alt="Graduating student in cap and gown"
+                            >
 
-       <div class="ratio-box">
-        <img src="//cdn2.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg" srcset="   //cdn2.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 1400w,
-        //cdn2.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 1200w,
-        //cdn2.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 1000w,
-        //cdn2.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 800w,
-        //cdn2.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 600w,
-        //cdn2.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 400w,
-        //cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 200w" data-srcset="   //cdn2.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 1400w,
-        //cdn2.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 1200w,
-        //cdn2.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 1000w,
-        //cdn2.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 800w,
-        //cdn2.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 600w,
-        //cdn2.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 400w,
-        //cdn2.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/about/images/site-images/students-sitting-outside.jpg 200w" data-sizes="auto" class="lazyload">
-    </div>
-    </div>
-    <div class="flickity--cell  ">
-        <div class="ratio-box">
-
-            <img src="//cdn1.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg" srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="   //cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 1400w,
-            //cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 1200w,
-            //cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 1000w,
-            //cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 800w,
-            //cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 600w,
-            //cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 400w,
-            //cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 200w" data-sizes="auto"  class="lazyload">
-
-
-
-        </div>
-        </div>
-        <div class="flickity--cell  ">
-            <div class="ratio-box">
-
-                <img src="//cdn1.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/about/images/site-images/student-drawing.jpg" srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="   //cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/about/images/site-images/student-drawing.jpg 1400w,
-                //cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/about/images/site-images/student-drawing.jpg 1200w,
-                //cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/about/images/site-images/student-drawing.jpg 1000w,
-                //cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/about/images/site-images/student-drawing.jpg 800w,
-                //cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/about/images/site-images/student-drawing.jpg 600w,
-                //cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/about/images/site-images/student-drawing.jpg 400w,
-                //cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/about/images/site-images/student-drawing.jpg 200w" data-sizes="auto"  class="lazyload">
-
-
-
-                </div>
+                    </div>
                 </div>
                 <div class="flickity--cell  " >
-<div class="ratio-box">
-
-                    <img src="//cdn4.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/about/images/site-images/students-design-studio.jpg" srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="   //cdn4.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/about/images/site-images/students-design-studio.jpg 1400w,
-                    //cdn4.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/about/images/site-images/students-design-studio.jpg 1200w,
-                    //cdn4.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/about/images/site-images/students-design-studio.jpg 1000w,
-                    //cdn4.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/about/images/site-images/students-design-studio.jpg 800w,
-                    //cdn4.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/about/images/site-images/students-design-studio.jpg 600w,
-                    //cdn4.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/about/images/site-images/students-design-studio.jpg 400w,
-                    //cdn4.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/about/images/site-images/students-design-studio.jpg 200w" data-sizes="auto"  class="lazyload">
-
-
+                    <div class="ratio-box">
+                        <img src="https://cdn3.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/students-talking-stairs.jpg"
+                            data-srcset="   https://cdn3.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/students-talking-stairs.jpg 1400w,
+                        https://cdn3.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/students-talking-stairs.jpg 1200w,
+                        https://cdn3.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/students-talking-stairs.jpg 1000w,
+                        https://cdn3.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/students-talking-stairs.jpg 800w,
+                        https://cdn3.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/students-talking-stairs.jpg 600w,
+                        https://cdn3.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/students-talking-stairs.jpg 400w,
+                        https://cdn3.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/undergrad/financial-aid/images/site-images/students-talking-stairs.jpg 200w"
+                            data-sizes="auto" class="lazyload"
+                            alt="Students standing on the stairs talking">
 
                     </div>
-                    </div>
-                    <div class="flickity--cell  " >
-<div class="ratio-box">
+                </div>
 
-                        <img src="//cdn4.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/about/images/site-images/humble-leaders-sign.jpg" srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="   //cdn4.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/about/images/site-images/humble-leaders-sign.jpg 1400w,
-                        //cdn4.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/about/images/site-images/humble-leaders-sign.jpg 1200w,
-                        //cdn4.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/about/images/site-images/humble-leaders-sign.jpg 1000w,
-                        //cdn4.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/about/images/site-images/humble-leaders-sign.jpg 800w,
-                        //cdn4.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/about/images/site-images/humble-leaders-sign.jpg 600w,
-                        //cdn4.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/about/images/site-images/humble-leaders-sign.jpg 400w,
-                        //cdn4.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/about/images/site-images/humble-leaders-sign.jpg 200w" data-sizes="auto"  class="lazyload">
-
-
-
-                        </div>
-                        </div>
-                        <div class="flickity--cell  " >
-<div class="ratio-box">
-
-                            <img src="//cdn4.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/about/images/site-images/students-walking-bridge.jpg" srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="   //cdn4.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/about/images/site-images/students-walking-bridge.jpg 1400w,
-                            //cdn4.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/about/images/site-images/students-walking-bridge.jpg 1200w,
-                            //cdn4.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/about/images/site-images/students-walking-bridge.jpg 1000w,
-                            //cdn4.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/about/images/site-images/students-walking-bridge.jpg 800w,
-                            //cdn4.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/about/images/site-images/students-walking-bridge.jpg 600w,
-                            //cdn4.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/about/images/site-images/students-walking-bridge.jpg 400w,
-                            //cdn4.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/about/images/site-images/students-walking-bridge.jpg 200w" data-sizes="auto"  class="lazyload">
-
-
-
-                        </div>
-                        </div>
-                        <div class="flickity--cell  ">
-                            <div class="ratio-box">
-
-                                <img src="//cdn1.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg" srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="   //cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 1400w,
-                                //cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 1200w,
-                                //cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 1000w,
-                                //cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 800w,
-                                //cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 600w,
-                                //cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 400w,
-                                //cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu/about/images/site-images/students-posing-photo.jpg 200w" data-sizes="auto"  class="lazyload">
-
-
-
-                            </div>
-                            </div>
-                            </div>
-                            </div>
+    </div>
+</div>
