updating marging above first h2 in .main

--- a/src/css/typography/typography.css
+++ b/src/css/typography/typography.css
@@ -82,9 +82,9 @@ h6, .h6 {
   font-weight: 600;
 }
 
-.main h2:first-child,
-.main h3:first-child,
-.main h4:first-child {
+.main > h2:first-child,
+.main > h3:first-child,
+.main > h4:first-child {
   margin-top: 0;
 }
 
