updating heading spacing in grid-cell and updating packages

--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -9,7 +9,8 @@
     <link href="https://www.bethel.edu/cdn/images/favicon.ico" rel="icon" type="image/x-icon"/> 
 
     <link rel="stylesheet" type="text/css" href="css/pickles.css">
-    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6664852/692222/css/fonts.css" />
+    <link rel="preconnect" href="https://cloud.typography.com">
+    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6664852/692222/css/fonts.css" media="print" onload="this.media='all'"/>
 
     {{!-- polyfill - picture element for ie11 --}}
     <script defer async src="https://cdn.polyfill.io/v2/polyfill.min.js?features=HTMLPictureElement&flags=gated"></script>
