--- a/src/css/typography/typography.css
+++ b/src/css/typography/typography.css
@@ -90,11 +90,11 @@ h6, .h6 {
 
 /* These rules remove the top margin of heading when it is the first in*/
 /* a grid-cell to make content top-aligned*/
-.grid-cell > h2,
-.grid-cell > h3,
-.grid-cell > h4,
-.grid-cell > h5,
-.grid-cell > h6 {
+.grid-cell h2:first-of-type,
+.grid-cell h3:first-of-type,
+.grid-cell h4:first-of-type,
+.grid-cell h5:first-of-type,
+.grid-cell h6:first-of-type {
   margin-top: 0;
 }
 
